--- a/hatespeech_detection.ipynb
+++ b/hatespeech_detection.ipynb
@@ -266,10 +266,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IhA94fY4d5n4",
-        "outputId": "e143cab6-a4b4-4258-f345-a5ed11fd3a95"
+        "outputId": "1eec5cf2-97d3-405d-a7a4-615333722bb4"
       },
       "id": "IhA94fY4d5n4",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,12 +283,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "270e12eb",
       "metadata": {
         "scrolled": true,
         "id": "270e12eb",
-        "outputId": "8d363806-2124-44b2-96b6-e23ae7f51628",
+        "outputId": "4abdc06c-3fc5-43f3-e215-1ceaad32dfc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -325,10 +325,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3SXpFYM7fCU9",
-        "outputId": "289fc429-a2c0-46a7-b41c-ec66fd4e54cf"
+        "outputId": "944265a3-9e8a-4a54-e0bb-59a0d37c2b57"
       },
       "id": "3SXpFYM7fCU9",
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,17 +346,21 @@
         "# my imports\n",
         "from utils_hs import load_csv\n",
         "from utils_hs import report_missing_values\n",
-        "from utils_hs import tokenise_text"
+        "from utils_hs import tokenise_text\n",
+        "from utils_hs import lemmatize_text\n",
+        "from utils_hs import word_frequency_analysis\n",
+        "from utils_hs import remove_numbers\n",
+        "from utils_hs import remove_urls"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4OJwjtP3ZZ0_",
-        "outputId": "29c759ef-787e-48c5-9f22-0c47655b0456"
+        "outputId": "0caf5c5c-3dbc-44d1-e7f2-d74cdaad63bc"
       },
       "id": "4OJwjtP3ZZ0_",
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,13 +368,6 @@
           "text": [
             "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
             "  and should_run_async(code)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -732,31 +729,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "3f56e2f7",
-      "metadata": {
-        "id": "3f56e2f7"
-      },
-      "outputs": [],
-      "source": [
-        "def lemmatize_text(data):\n",
-        "    \"\"\"\n",
-        "    Lemmatises the tesxt data\n",
-        "    \"\"\"\n",
-        "    try:\n",
-        "        lemm = WordNetLemmatizer() #using the inbuilt lemmatisation function\n",
-        "\n",
-        "    # Lemmatize all words\n",
-        "        data['lemmatized'] = data['tokens'].apply(lambda x: [lemm.lemmatize(word) for word in x])\n",
-        "        print(\"Lemmatisation successful\")\n",
-        "        return data\n",
-        "    except Exception as e:\n",
-        "        print(f\"An error occurred during lemmatisation: {e}\")\n",
-        "        return None"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "9d93d246",
       "metadata": {
         "id": "9d93d246",
@@ -911,32 +883,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "8e9c6a9b",
-      "metadata": {
-        "id": "8e9c6a9b"
-      },
-      "outputs": [],
-      "source": [
-        "def word_frequency_analysis(data):\n",
-        "    \"\"\"\n",
-        "    calculates the most common words in the data\n",
-        "    \"\"\"\n",
-        "    words_1 = data[data.oh_label == 1]['lemmatized']\n",
-        "    words_0 = data[data.oh_label == 0]['lemmatized']\n",
-        "\n",
-        "    _1_words = Counter(word for words in words_1 for word in str(words).split())\n",
-        "    _0_words = Counter(word for words in words_0 for word in str(words).split())\n",
-        "\n",
-        "    print(\"Most common words for oh_label = 1:\")\n",
-        "    print(_1_words.most_common(50))\n",
-        "\n",
-        "    print(\"Most common words for oh_label = 0:\")\n",
-        "    print(_0_words.most_common(50))\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "afdddb6c",
       "metadata": {
         "id": "afdddb6c",
@@ -979,23 +925,7 @@
       },
       "outputs": [],
       "source": [
-        "# Function to remove numbers from a list of words\n",
-        "def remove_numbers(word_list):\n",
-        "    \"\"\"\n",
-        "    removees any numbers from the text\n",
-        "    \"\"\"\n",
-        "    return [word for word in word_list if not bool(re.search(r'\\d', word))]\n",
-        "\n",
         "all_data['lemmatized_no_numbers'] = all_data['lemmatized'].apply(remove_numbers)\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Function to remove URLs from a list of words\n",
-        "def remove_urls(word_list):\n",
-        "    \"\"\"\n",
-        "    Removes any URLs from the text\n",
-        "    \"\"\"\n",
-        "    return [word for word in word_list if not (word.startswith('http') or word.startswith('www'))]\n",
         "\n",
         "all_data['lemmatized_clean'] = all_data['lemmatized_no_numbers'].apply(remove_urls)\n"
       ]
