--- a/utils_hs.ipynb
+++ b/utils_hs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4tiKPeM85zZuz3JX+8Gj+",
+      "authorship_tag": "ABX9TyPtJkifPQJRhq09BPncRfzS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2JCVS6SXLdq",
-        "outputId": "76b0ff16-3ac6-4864-ed75-1e4964c9e0a9"
+        "outputId": "ef992c78-be4c-4c2c-b011-ecf427327c55"
       },
       "outputs": [
         {
@@ -48,10 +48,29 @@
       "source": [
         "%%writefile \"/content/drive/My Drive/Projects_Portfolio/hatespeech_detection/utils_hs.py\"\n",
         "\n",
-        "import pandas as pd\n",
+        "# loading neccesary libraries\n",
         "\n",
+        "import nltk\n",
+        "nltk.download('wordnet')\n",
+        "import re\n",
+        "import pandas as pd\n",
+        "from nltk.stem import WordNetLemmatizer\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from collections import Counter\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer, ENGLISH_STOP_WORDS\n",
+        "from sklearn.decomposition import LatentDirichletAllocation, NMF\n",
+        "import pyLDAvis\n",
+        "import numpy as np\n",
+        "import time\n",
+        "from gensim.models import CoherenceModel\n",
+        "from gensim.corpora.dictionary import Dictionary\n",
+        "import matplotlib.pyplot as plt\n",
+        "from wordcloud import WordCloud\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "import seaborn as sns\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
         "\n",
         "def load_csv(file_path):\n",
         "    try:\n",
@@ -102,7 +121,7 @@
         "        return data\n",
         "    except Exception as e:\n",
         "        print(f\"An error occurred during lemmatisation: {e}\")\n",
-        "        return None\n",
+        "        return data\n",
         "\n",
         "def word_frequency_analysis(data):\n",
         "    \"\"\"\n",
@@ -127,7 +146,6 @@
         "    \"\"\"\n",
         "    return [word for word in word_list if not bool(re.search(r'\\d', word))]\n",
         "\n",
-        "all_data['lemmatized_no_numbers'] = all_data['lemmatized'].apply(remove_numbers)\n",
         "\n",
         "\n",
         "\n",
@@ -138,7 +156,6 @@
         "    \"\"\"\n",
         "    return [word for word in word_list if not (word.startswith('http') or word.startswith('www'))]\n",
         "\n",
-        "all_data['lemmatized_clean'] = all_data['lemmatized_no_numbers'].apply(remove_urls)\n",
         "\n"
       ]
     },
@@ -148,22 +165,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "r4r19X1ibqc9",
-        "outputId": "d32b7465-d742-4970-9ae5-80069922c70d"
+        "id": "r4r19X1ibqc9"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": 24,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -171,7 +176,7 @@
       "metadata": {
         "id": "JsSZwZYOaSTI"
       },
-      "execution_count": 19,
+      "execution_count": 24,
       "outputs": []
     }
   ]
