--- a/utils_hs.ipynb
+++ b/utils_hs.ipynb
@@ -68,7 +68,7 @@
         "from wordcloud import WordCloud\n",
         "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
         "import seaborn as sns\n",
-        "from google.colab import drive\n",
+        "#from google.colab import drive\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
         "\n",
